--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 DarkKat
+<!-- Copyright (C) 2018 DarkKat
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,6 +14,9 @@
      limitations under the License.
 -->
 <resources>
+
+    <!-- General -->
+    <string name="app_name">DarkKat Notifications Test</string>
 
     <!-- Type buttons -->
     <string name="default_title">Default</string>
