--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="show_reply_action_title">Show reply action</string>
     <string name="show_reply_action_summary">Enable to show a reply action.</string>
     <string name="use_default_notification_color_title">Use default</string>
-    <string name="use_default_notification_color_summary">Enable to use the default notification color, disable to choose a color.</string>
+    <string name="use_default_notification_color_summary">Enable to use the default notification color, disable to choose a color.\n(NOTE: Media notifications will use an own notification color, so the default or custom notification color won\'t be applied to media notifications).</string>
     <string name="notification_color_title">Notification color</string>
     <string name="color_title">Color</string>
     <string name="pick_color_title">Pick color</string>
